Better support and testing for k8s
First stab at getting something tested in Kubernetes. Providing a
basic config file (neo4j-single.yaml) that will launch an EE version
of my containerized Neo4j.

Since we monkey with the jvm settings in the traditional neo4j shell
script bootstrapper, to better support runtime setting of heap space
we need a somewhat analgous shim layer. In this case, Go is a very
handy tool for the job thanks to its static binary support.

The go shim will essentially do the job of looking for
JVM_MAXIMUM_HEAP and JVM_INITIAL_HEAP and turn those into java
-Xmx/-Xms args as needed before building an calling execve.

Other changes include moving all the default JVM tuning settings to
the JAVA_TOOL_OPTIONS environment variable to simplify the ENTRYPOINT
definition in the Dockerfile.

--- a/Dockerfile.enterprise
+++ b/Dockerfile.enterprise
@@ -1,5 +1,5 @@
 ## Use a simple Alpine container just to fetch and stage the Neo4j files
-FROM alpine:3.12 AS downloader
+FROM alpine:3.12 AS neo4j-ee-downloader
 RUN apk update && apk add openjdk11-jre-headless openssl
 
 ARG NEO4J_SHA256=f1b5ee0db7771abeb7a9db2f3c8b6d92850d5587ed99926c417bf5c70d883c06
@@ -18,53 +18,61 @@ RUN wget -q -P /tmp "${NEO4J_DOWNLOAD_URI}/${NEO4J_TARBALL}" \
     && ln -s /data "${NEO4J_HOME}/data" \
     && ln -s /logs "${NEO4J_HOME}/logs" \
     && ln -s /plugins "${NEO4J_HOME}/plugins" \
+    && ln -s /import "${NEO4J_HOME}/import" \
     && mkdir /metrics && ln -s /metrics "${NEO4J_HOME}/metrics"
 
+## Build our execve wrapper
+FROM golang:1.15-buster AS go-builder
+WORKDIR /go/src/app
+ENV GOOS=linux \
+    LDFLAGS="-s -w"
+COPY gojava.go .
+RUN go build -ldflags="${LDFLAGS}" gojava.go
 
 ####################################################################################
 ## Use Google's "distroless" OpenJDK image...less bloat, more awesome!
 FROM gcr.io/distroless/java-debian10:11
 ARG NEO4J_HOME="/neo4j"
 ARG NONROOT=nonroot
-COPY --from=downloader "${NEO4J_HOME}" "${NEO4J_HOME}"
+COPY --from=neo4j-ee-downloader "${NEO4J_HOME}" "${NEO4J_HOME}"
 # Since this container is shell-less, we use COPY with --chown to make directories
-COPY --from=downloader --chown=${NONROOT} /data /data
-COPY --from=downloader --chown=${NONROOT} /logs /logs
-COPY --from=downloader --chown=${NONROOT} /metrics /metrics
-COPY --from=downloader /plugins /plugins
+COPY --from=neo4j-ee-downloader --chown=${NONROOT} /data /data
+COPY --from=neo4j-ee-downloader --chown=${NONROOT} /logs /logs
+COPY --from=neo4j-ee-downloader --chown=${NONROOT} /metrics /metrics
+COPY --from=neo4j-ee-downloader /plugins /plugins
+COPY --from=go-builder /go/src/app/gojava /bin/gojava
 
 # /tmp is required at the moment to support --read-only thanks to JNA stuff
 VOLUME ["/data", "/logs", "/plugins", "/tmp"]
 
 ENV CLASSPATH="${NEO4J_HOME}/lib-override:${NEO4J_HOME}/lib-override/*:${NEO4J_HOME}/plugins:${NEO4J_HOME}/plugins/*:${NEO4J_HOME}/lib:${NEO4J_HOME}/lib/*"
-# Check Neo4j can run
-RUN ["java", "--dry-run", "org.neo4j.server.CommunityEntryPoint"]
 
+# Default JRE config
+ENV JAVA_TOOL_OPTIONS -Dfile.encoding=UTF-8 \
+    -XX:+UseG1GC \
+    -XX:-OmitStackTraceInFastThrow \
+    -XX:+AlwaysPreTouch \
+    -XX:+UnlockExperimentalVMOptions \
+    -XX:+TrustFinalNonStaticFields \
+    -XX:+DisableExplicitGC \
+    -XX:MaxInlineLevel=15 \
+    -Djdk.nio.maxCachedBufferSize=262144 \
+    -Dio.netty.tryReflectionSetAccessible=true \
+    -XX:+ExitOnOutOfMemoryError \
+    -Djdk.tls.ephermeralDHKeySize=2048 \
+    -Djdk.tls.rejectClientInitiatedRenogotiation=true \
+    -XX:FlightRecorderOptions=stackdepth=256 \
+    -XX:+UnlockDiagnosticVMOptions \
+    -XX:+DebugNonSafepoints
+
+# Check if Neo4j can run
+RUN ["gojava", "--dry-run", "org.neo4j.server.CommunityEntryPoint"]
+
+# Actual app-specific details
 EXPOSE 7474 7473 7687
 USER nonroot
-
-# Default config
 ENV NEO4J_dbms_default__listen__address=0.0.0.0
-
-# All the esoteric settings from the original neo4j shell can go here
-ENTRYPOINT ["java", \
-    "-Dfile.encoding=UTF-8", \
-    "-XX:+UseG1GC", \
-    "-XX:-OmitStackTraceInFastThrow", \
-    "-XX:+AlwaysPreTouch", \
-    "-XX:+UnlockExperimentalVMOptions", \
-    "-XX:+TrustFinalNonStaticFields", \
-    "-XX:+DisableExplicitGC", \
-    "-XX:MaxInlineLevel=15", \
-    "-Djdk.nio.maxCachedBufferSize=262144", \
-    "-Dio.netty.tryReflectionSetAccessible=true", \
-    "-XX:+ExitOnOutOfMemoryError", \
-    "-Djdk.tls.ephermeralDHKeySize=2048", \
-    "-Djdk.tls.rejectClientInitiatedRenogotiation=true", \
-    "-XX:FlightRecorderOptions=stackdepth=256", \
-    "-XX:+UnlockDiagnosticVMOptions", \
-    "-XX:+DebugNonSafepoints"]
-CMD ["io.sisu.neo4j.server.EnterpriseContainerEntryPoint", \
-        "--home-dir=/neo4j", "--config-dir=/neo4j/conf"]
+ENTRYPOINT ["gojava"]
+CMD ["io.sisu.neo4j.server.EnterpriseContainerEntryPoint", "--home-dir=/neo4j", "--config-dir=/neo4j/conf"]
 
 COPY ./build/libs/container-bootstrapper.jar "${NEO4J_HOME}/lib-override/"
