--- a/Dockerfile.enterprise
+++ b/Dockerfile.enterprise
@@ -75,4 +75,5 @@ ENV NEO4J_dbms_default__listen__address=0.0.0.0
 ENTRYPOINT ["gojava"]
 CMD ["io.sisu.neo4j.server.EnterpriseContainerEntryPoint", "--home-dir=/neo4j", "--config-dir=/neo4j/conf"]
 
-COPY ./build/libs/container-bootstrapper.jar "${NEO4J_HOME}/lib-override/"
+COPY ./build/container-bootstrapper/lib/* "${NEO4J_HOME}/lib-override/"
+COPY ./build/container-bootstrapper/container-bootstrapper.jar "${NEO4J_HOME}/lib-override/"
