--- a/build.gradle
+++ b/build.gradle
@@ -1,37 +1,37 @@
-plugins {
-    // Apply the java-library plugin to add support for Java Library
-    id 'java-library'
-    id 'java-library-distribution'
-}
+subprojects {
+    apply plugin: 'java'
+    group = 'io.sisu.neo4j'
+    version = '0.1.0-SNAPSHOT'
+    repositories {
+        jcenter()
+    }
+    test {
+        useJUnitPlatform()
+    }
 
-distributions {
-    main {
-        distributionBaseName = 'container-bootstrapper'
+    dependencies {
+        // Use JUnit Jupiter API for testing.
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+        testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
+
+        // Use JUnit Jupiter Engine for testing.
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
     }
 }
 
-repositories {
-    // Use jcenter for resolving dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+project(':bootstrapper') {
+    dependencies {
+        compileOnly 'org.neo4j:neo4j:4.1.1'
+        testImplementation 'org.neo4j:neo4j:4.1.1'
+    }
 }
 
-dependencies {
-    compileOnly 'org.neo4j:neo4j:4.1.1'
-    implementation 'com.google.cloud:google-cloud-nio:0.121.2'
-
-    // Use JUnit Jupiter API for testing.
-    testImplementation 'org.neo4j:neo4j:4.1.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
-
-    // Use JUnit Jupiter Engine for testing.
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
-}
-
-test {
-    // Use junit platform for unit tests
-    useJUnitPlatform()
+project(':gcp') {
+    dependencies {
+        implementation project(':bootstrapper')
+        implementation 'com.google.cloud:google-cloud-nio:0.121.2'
+        testImplementation 'org.neo4j:neo4j:4.1.1'
+    }
 }
 
 task unpack(type: Copy, dependsOn: 'distZip' ) {
