first cut at Google Secret Manager support
Use gsm://<projectId>/<secretId>?version=<versionId>

Version is optional and will default to "latest" which is a special
version per the api.

To run integration test, configure a service account and set up the
GOOGLE_APPLICATION_CREDENTIALS environment variable to point to the
json key file of said account. You may need to update the test if you
aren't using my secret though :-)

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ project(':gcp') {
     dependencies {
         implementation project(':bootstrapper')
         implementation 'com.google.cloud:google-cloud-nio:0.121.2'
+        implementation 'com.google.cloud:google-cloud-secretmanager:1.1.1'
         testImplementation 'org.neo4j:neo4j:4.1.1'
     }
 }
